--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -12,9 +12,10 @@
   <script src="lib/jasmine-3.5.0/boot.js"></script>
 
   <!-- include source files here... -->
-
+  <script src="src/note-model.js"></script>
 
   <!-- include spec files here... -->
+  <script src="spec/note-modelSpec.js"></script>
 
 
 </head>
