--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -14,11 +14,12 @@
   <!-- include source files here... -->
   <script src="src/note-model.js"></script>
   <script src="src/note-list-model.js"></script>
+  <script src="src/note-list-view.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/note-modelSpec.js"></script>
   <script src="spec/note-list-modelSpec.js"></script>
-
+  <script src="spec/note-list-viewSpec.js"></script>
 
 </head>
 
