Add 'SingleNoteView' class that contains method to generate HTML string for a 'NoteModel' object

--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -15,11 +15,13 @@
   <script src="src/note-model.js"></script>
   <script src="src/note-list-model.js"></script>
   <script src="src/note-list-view.js"></script>
+  <script src="src/single-note-view.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/note-modelSpec.js"></script>
   <script src="spec/note-list-modelSpec.js"></script>
   <script src="spec/note-list-viewSpec.js"></script>
+  <script src="spec/single-note-viewSpec.js"></script>
 
 </head>
 
