--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="jasmine/src/note-list-model.js"></script>
     <script src="jasmine/src/note-model.js"></script>
     <script src="jasmine/src/note-list-view.js"></script>
+    <script src="jasmine/src/single-note-view.js"></script>
   </head>
 
   <body>
